--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Discover Place</title>
+    <title>Discover</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -51,6 +51,7 @@
             <div class="row h-100">
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
+                        <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
                         <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
@@ -88,7 +89,7 @@
                             </ul>
                             <!-- Search btn -->
                             <div class="dorne-search-btn">
-                                <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
+                                <!-- <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a> -->
                             </div>
                             <!-- Signin btn -->
                             <!-- <div class="dorne-signin-btn">
@@ -121,7 +122,7 @@
                 <!-- Tabs -->
                 <div class="nav nav-tabs" id="heroTab" role="tablist">
                     <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places" role="tab" aria-controls="nav-places" aria-selected="true">Places</a>
-                    <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a>
+                    <!-- <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a> -->
                 </div>
                 <!-- Tabs Content -->
                 <div class="tab-content" id="nav-tabContent">
@@ -130,6 +131,10 @@
                             <!-- <div class="col-12 col-md-10">
                                 <input type="text" name="name" class="form-control" placeholder="Keyword">
                             </div> -->
+                            <select class="custom-select">
+                                <option selected>Keyword</option>
+                                <option value="1">..............................</option>
+                            </select>
                             <select class="custom-select" id="destinations">
                                 <option selected>Your Destinations</option>
                                 <option value="1">Bangkok</option>
