--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Discover Place</title>
+    <title>Discover</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -51,6 +51,7 @@
             <div class="row h-100">
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
+                        <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
                         <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
@@ -88,7 +89,7 @@
                             </ul>
                             <!-- Search btn -->
                             <div class="dorne-search-btn">
-                                <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
+                                <!-- <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a> -->
                             </div>
                             <!-- Signin btn -->
                             <!-- <div class="dorne-signin-btn">
@@ -124,8 +125,8 @@
                         <h6><i class="fa fa-map-signs" aria-hidden="true"></i> No. 25-33</h6>
                     </div> -->
                     <div class="single-contact-info">
-                        <h6><i class="fa fa-envelope-o" aria-hidden="true"></i> contact@discoverplace.com</h6>
-                        <h6><i class="fa fa-phone" aria-hidden="true"></i> +6691-234-5678</h6>
+                        <h6><i class="fa fa-envelope-o" aria-hidden="true"></i> contact@discover.com</h6>
+                        <h6><i class="fa fa-phone" aria-hidden="true"></i> +6699-999-9999</h6>
                     </div>
                 </div>
             </div>
