--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Discover Place</title>
+    <title>Discover</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -51,6 +51,7 @@
             <div class="row h-100">
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
+                        <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
                         <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
@@ -88,7 +89,7 @@
                             </ul>
                             <!-- Search btn -->
                             <div class="dorne-search-btn">
-                                <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
+                                <!-- <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a> -->
                             </div>
                             <!-- Signin btn -->
                             <!-- <div class="dorne-signin-btn">
@@ -112,30 +113,29 @@
             <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-12 col-md-10">
                     <div class="hero-content">
-                        <h2>Discover Place</h2>
-                        <h4>Nearby Place Around You</h4>
+                        <h2>Discover</h2>
+                        <h4>Find Nearby Place</h4>
                     </div>
                     
                     <div class="hero-search-form">
                         <!-- Tabs -->
                         <div class="nav nav-tabs" id="heroTab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places" role="tab" aria-controls="nav-places" aria-selected="true">Places</a>
-                            <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a>
+                            <!-- <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a> -->
                         </div>
                         <!-- Tabs Content -->
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                                 <h6>What are you looking for?</h6>
                                 <form action="#" method="get">
-                                    <!-- <div class class="equal-height">
-                                        <div class="col-12 col-md-6">
-                                            <input type="text" name="name" class="form-control" placeholder="Your Name">
-                                        </div>
-                                    </div> -->
+                                    <select class="custom-select">
+                                        <option selected>Keyword</option>
+                                        <option value="1">..............................</option>
+                                    </select>
                                     <select class="custom-select">
                                         <option selected>City Destinations</option>
                                         <option value="1">Bangkok</option>
-                                        <option value="2">Phra Nakhon Si Ayutthaya</option>
+                                        <option value="2">Ayutthaya</option>
                                         <option value="3">Samut Prakan</option>
                                         <option value="4">Nonthaburi</option>
                                         <option value="5">Pathum Thani</option>
@@ -146,16 +146,10 @@
                                         <option value="2">Shopping</option>
                                         <option value="3">Hotels</option>
                                     </select>
-                                    <!-- <select class="custom-select">
-                                        <option selected>Price Range</option>
-                                        <option value="1">$100 - $499</option>
-                                        <option value="2">$500 - $999</option>
-                                        <option value="3">$1000 - $4999</option>
-                                    </select> -->
                                     <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                                 </form>
                             </div>
-                            <div class="tab-pane fade" id="nav-events" role="tabpanel" aria-labelledby="nav-events-tab">
+                            <!-- <div class="tab-pane fade" id="nav-events" role="tabpanel" aria-labelledby="nav-events-tab">
                                 <h6>What are you looking for?</h6>
                                 <form action="#" method="get">
                                     <select class="custom-select">
@@ -172,16 +166,16 @@
                                         <option value="2">Accommodation</option>
                                         <option value="3">Attraction</option>
                                         <option value="4">Other</option>
-                                    </select>
+                                    </select> -->
                                     <!-- <select class="custom-select">
                                         <option selected>Price Range</option>
                                         <option value="1">$100 - $499</option>
                                         <option value="2">$500 - $999</option>
                                         <option value="3">$1000 - $4999</option>
                                     </select> -->
-                                    <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
+                                    <!-- <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                                 </form>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
