--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -131,10 +131,7 @@
                             <!-- <div class="col-12 col-md-10">
                                 <input type="text" name="name" class="form-control" placeholder="Keyword">
                             </div> -->
-                            <select class="custom-select">
-                                <option selected>Keyword</option>
-                                <option value="1">..............................</option>
-                            </select>
+                            <input type="text" name="Keyword" class="form-control custom-select" placeholder="Keyword">
                             <select class="custom-select" id="destinations">
                                 <option selected>Your Destinations</option>
                                 <option value="1">Bangkok</option>
