--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,10 +128,7 @@
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                                 <h6>What are you looking for?</h6>
                                 <form action="#" method="get">
-                                    <select class="custom-select">
-                                        <option selected>Keyword</option>
-                                        <option value="1">..............................</option>
-                                    </select>
+                                    <input type="text" name="Keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select class="custom-select">
                                         <option selected>City Destinations</option>
                                         <option value="1">Bangkok</option>
