--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -121,8 +121,8 @@
                 <h6>What are you looking for?</h6>
                 <!-- Tabs -->
                 <div class="nav nav-tabs" id="heroTab" role="tablist">
-                    <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places" role="tab" aria-controls="nav-places" aria-selected="true">Places</a>
-                    <!-- <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a> -->
+                    <!-- <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places" role="tab" aria-controls="nav-places" aria-selected="true">Places</a>
+                    <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a> -->
                 </div>
                 <!-- Tabs Content -->
                 <div class="tab-content" id="nav-tabContent">
