--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -357,7 +357,7 @@
     <script src="js/active.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
-alert($("#b").val());
+alert(qwer);
         })
       </script>
     <script>
