--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                                 <h6>What are you looking for?</h6>
-                                <form action="explorer/" method="get">
+                                <form action="explorer" method="get">
                                     <input type="text" name="keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select name="city" class="custom-select">
                                         <option selected>City Destinations</option>
