--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -250,7 +250,7 @@
                     </div>
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <h5>Lantana Resort</h5>
+                            <h5 id="name1">Lantana Resort</h5>
                             <p>Bangkok</p>
                         </div>
                         <div class="feature-favourite">
@@ -365,9 +365,10 @@ const type = urlParams.get('type');
 document.getElementById('keyword').value = keyword;
 document.getElementById('city').value = city;
 document.getElementById('type').value = type;
+myFunction();
         })
       </script>
-    <!-- <script>
+    <script>
         function myFunction() {
             $.ajaxSetup({
                 headers : {
@@ -375,9 +376,9 @@ document.getElementById('type').value = type;
                     'Accept-Language' : 'th'
                 }
             });
-            $.getJSON("https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword=อาหาร&location=13.6904831,100.5226014&categories=RESTAURANT&provinceName=Bangkok&radius=20&numberOfResult=10&pagenumber=1&destination=Bangkok&filterByUpdateDate=2019/09/01-2021/12/31", function(result){
-            alert(result)
-            document.getElementById("keyword").innerHTML = "1"
+            $.getJSON("https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword="+keyword+"&categories="+type+"&provinceName="+city+"&numberOfResult=100", function(result){
+            console.log(result)
+            document.getElementById("name1").innerHTML = "testetets"
             // var obj = JSON.stringify(result.weather.description);
             // document.getElementById("coord").innerHTML = "&nbsp&nbsp&nbspสถานที่ตั้ง ละติจูด: "+JSON.stringify(result.coord.lon)+" ลองติจูด: "+JSON.stringify(result.coord.lat);
             // document.getElementById("description").innerHTML = "&nbsp&nbsp&nbspสภาพอากาศ: "+(JSON.stringify(result.weather[0].description)).slice(1, -1);;
@@ -389,7 +390,7 @@ document.getElementById('type').value = type;
             // document.getElementById("speed").innerHTML = "&nbsp&nbsp&nbspความเร็วลม : "+JSON.stringify(result.wind.speed);
             });
             }
-    </script> -->
+    </script>
 </body>
 
 </html>
