--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -133,7 +133,7 @@
                             </div> -->
                             <input type="text" name="keyword" id='keyword' class="form-control custom-select" placeholder="Keyword">
                             <select name="city" id='city' class="custom-select" id="destinations">
-                                <option selected>Your Destinations</option>
+                                <option value="" selected>Your Destinations</option>
                                 <option value="1">Bangkok</option>
                                 <option value="2">Phra Nakhon Si Ayutthaya</option>
                                 <option value="3">Samut Prakan</option>
@@ -141,7 +141,7 @@
                                 <option value="5">Pathum Thani</option>
                             </select>
                             <select name="type" id='type' class="custom-select" id="catagories">
-                                <option selected>All Catagories</option>
+                                <option value="" selected>All Catagories</option>
                                 <option value="1">Restaurants</option>
                                 <option value="2">Shopping</option>
                                 <option value="3">Hotels</option>
