--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,7 +130,7 @@
                                 <form action="explorer" method="get">
                                     <input type="text" name="keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select name="city" class="custom-select">
-                                        <option selected>City Destinations</option>
+                                        <option value="" selected>City Destinations</option>
                                         <option value="1">Bangkok</option>
                                         <option value="2">Ayutthaya</option>
                                         <option value="3">Samut Prakan</option>
@@ -138,7 +138,7 @@
                                         <option value="5">Pathum Thani</option>
                                     </select>
                                     <select name="type"class="custom-select">
-                                        <option selected>All Catagories</option>
+                                        <option value=""  selected>All Catagories</option>
                                         <option value="1">Restaurants</option>
                                         <option value="2">Shopping</option>
                                         <option value="3">Hotels</option>
